==> OrchidRock/FreeRTOS_Demos/OV7670_Demo/ov7670.c <==
#include "ov7670.h"
#include "../systick_delay.h"
#include "../tm4c123gh6pm.h"
#include "../PWM0.h"
#include "../uart0_debug.h"
#include "../I2C0.h"

void OV7670_GPIO_Init(void)
{
    // PB0-7
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOB);
    while (!SysCtlPeripheralReady(SYSCTL_PERIPH_GPIOB)) {}
    
    GPIOPinTypeGPIOInput(GPIO_PORTB_BASE, 0xFF); 
    
    // VSYNC, HREF, PCLK
    
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOA);
    while (!SysCtlPeripheralReady(SYSCTL_PERIPH_GPIOA)) {}

    GPIOPinTypeGPIOInput(GPIO_PORTA_BASE, VSYNC_PIN | PCLK_PIN | HREF_PIN);
    
    // XCLK PD0
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_PWM0);   
    GPIOPinConfigure(GPIO_PD0_M0PWM6);
    GPIOPinTypePWM(GPIO_PORTD_BASE, XCLK_PIN);
    
    PWMGenConfigure(PWM0_BASE, PWM_GEN_0, PWM_GEN_MODE_UP_DOWN | PWM_GEN_MODE_NO_SYNC); 
    PWMOutputState(PWM0_BASE, PWM_OUT_6_BIT, true);
    PWMGenPeriodGet(PWM0_BASE, PWM_GEN_0, );
    PWMPulseWidthSet(PWM0_BASE, PWM_OUT_6, PWMGenPeriodGet(PWM0_BASE, PWM_GEN_0) / 2); // 50% duty
    PWMGenEnable(PWM0_BASE, PWM_GEN_0); 
}

void OV7670_GPIO_CONTRL_CONFIG(void){
	SYSCTL_RCGC2_R |= 0x00000001; // activate port A
    while((SYSCTL_PRGPIO_R&0x0001) == 0){};// ready?
	
    GPIO_PORTA_CR_R |= 0x38; // allow change for PA3,PA4,PA5
	GPIO_PORTA_AMSEL_R &= ~0x38;
	GPIO_PORTA_DIR_R &= ~0x38; // PA3,4,5 In
	GPIO_PORTA_AFSEL_R &= ~0x38;
	GPIO_PORTA_DEN_R |= 0x38; // enable digital I/O on PA3,4,5,
	GPIO_PORTA_PCTL_R = (GPIO_PORTA_PCTL_R&0xFF000FFF)+0x00000000; 

    // XLCK PWM0 : PB6
    PWM0A_Init(400,200); // 50% duty
      
}

unsigned char OV7670_init(void)
{
	unsigned char temp;	
    //unsigned int i=0;

	OV7670_GPIO_Init();
	OV7670_GPIO_CONTRL_CONFIG();
	//SCCB_GPIO_Config(); // io init..
    I2C_Init();
    
    CLK_init_ON();
	temp=0x80;
	if(0==wrOV7670Reg(0x12, temp)) //Reset SCCB
	{
        UART0_OutStringCRLF("Reset Failed");
        return 0 ;
	}
	systick_delay_ms(100);
  	set_OV7670reg();

    UART0_OutStringCRLF("OV7670_init Ok");
	OV7670_config_window(272,12,320,240);// set 240*320
    UART0_OutStringCRLF("config window Ok");
	return 0x01; //ok			  
}
